fixed missing padding on firefox

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -458,6 +458,8 @@ body.light-mode .dropdown .dropbtn {
 
 .item-grid {
   margin-top: 180px;
+  padding-left: 0.6rem;
+  padding-right: 0.6rem;
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
